--- a/frontend/src/assets/styles/tailwind.css
+++ b/frontend/src/assets/styles/tailwind.css
@@ -4296,6 +4296,58 @@ select {
   left: -100%;
 }
 
+.top-10-px {
+  top: 10px;
+}
+.top-34-px {
+  top: 34px;
+}
+.top-58-px {
+  top: 58px;
+}
+.top-82-px {
+  top: 82px;
+}
+.top-106-px {
+  top: 106px;
+}
+.top-130-px {
+  top: 130px;
+}
+.top-154-px {
+  top: 154px;
+}
+.top-178-px {
+  top: 178px;
+}
+.top-202-px {
+  top: 202px;
+}
+.top-226-px {
+  top: 226px;
+}
+.top-250-px {
+  top: 250px;
+}
+.top-274-px {
+  top: 274px;
+}
+.top-298-px {
+  top: 298px;
+}
+.top-322-px {
+  top: 322px;
+}
+.top-346-px {
+  top: 346px;
+}
+.top-370-px {
+  top: 370px;
+}
+.top-394-px {
+  top: 394px;
+}
+
 .-top-94-px {
   top: -94px;
 }
@@ -4342,6 +4394,9 @@ select {
 
 .left-1\/10 {
   left: 10%;
+}
+.left-3\/100 {
+  left: 3%;
 }
 
 .top-7\/20 {
