--- a/frontend/src/assets/scss/now-ui-kit/_variables.scss
+++ b/frontend/src/assets/scss/now-ui-kit/_variables.scss
@@ -1,6 +1,6 @@
 //== Buttons
 //
-//## For each of Bootstrap's buttons, define text, background and border color.
+//## For each of Bootstrap's.js buttons, define text, background and border color.
 
 $sans-serif-family:          'Montserrat', 'Helvetica Neue',  Arial, sans-serif !default;
 
