--- a/frontend/src/assets/scss/now-ui-kit/plugins/_plugin-bootstrap-switch.scss
+++ b/frontend/src/assets/scss/now-ui-kit/plugins/_plugin-bootstrap-switch.scss
@@ -18,7 +18,7 @@
 
 
 
- //* IMPORTANT! Creative Tim Notice: this file has major changes to fit the NOW UI Kit's design. If you want to use the plugin as it was before our changes, please get the old files from http://www.bootstrap-switch.org
+ //* IMPORTANT! Creative Tim Notice: this file has major changes to fit the NOW UI Kit's.js design. If you want to use the plugin as it was before our changes, please get the old files from http://www.bootstrap-switch.org
 
 
 
