add highlight to the textarea (LTL, inputs & outputs, parenthesis)

--- a/frontend/src/assets/styles/textEditorStyle.css
+++ b/frontend/src/assets/styles/textEditorStyle.css
@@ -21,3 +21,24 @@
   width: 40px;
   font-weight: 100;
 }
+
+.l1 {
+  color: orange;
+}
+
+.l2 {
+  color: #2be6ff;
+}
+
+.l3 {
+  color: #da2a2a;
+}
+
+.l4 {
+  color: #4f68e7;
+}
+
+.l5 {
+  color: #e74fc9;
+}
+
