--- a/frontend/src/assets/styles/tailwind.css
+++ b/frontend/src/assets/styles/tailwind.css
@@ -1947,6 +1947,11 @@ select {
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(52, 211, 153, 0));
 }
 
+.from-emerald-450 {
+    --tw-gradient-from: #19c487;
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(52, 211, 153, 0));
+}
+
 .from-emerald-500 {
     --tw-gradient-from: #10b981;
     --tw-gradient-to: rgb(16 185 129 / 0);
@@ -4526,6 +4531,10 @@ select {
 .hover\:shadow-lg:hover {
     --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:custom-transform:hover{
+    -webkit-transform: scale(1.1);
 }
 
 * {
